commit Age Calculator

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
+
 <body>
-    <script src="./index.js"></script>
+    <script>
+
+        var noOfChildren = 2;
+        var partnersName = "Jenny";
+        var geographicLocation = "Canada";
+        var jobTitle = "Software Developer";
+
+
+        console.log("You will be a " + jobTitle + " " + "in " + geographicLocation + "," + " " + "and married to " + partnersName + " " + "with " + noOfChildren + " kids" + ".");
+
+        // The Age Calculator
+        
+        var birthYear = 1994;
+        var futureYear = 2030;
+        var futureAge = futureYear - birthYear;
+        var futureAgeB = futureAge --;
+        var myAges = "I will either be " + futureAge + " or" + " " + futureAgeB + " years" + ".";
+
+        console.log(myAges)
+
+        // the lifetime Supply calculator 
+
+        var currentAge = 27;
+        var maxAge = 89;
+        var snackPerDay = 3;
+
+        var snacks = (maxAge - cuurrentAge ) * 365 * 3;
+
+
+
+    </script>
 </body>
+
 </html>
