--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         console.log("You will be a " + jobTitle + " " + "in " + geographicLocation + "," + " " + "and married to " + partnersName + " " + "with " + noOfChildren + " kids" + ".");
 
         // The Age Calculator
-        
+
         var birthYear = 1994;
         var futureYear = 2030;
         var futureAge = futureYear - birthYear;
@@ -28,9 +28,11 @@
         var maxAge = 89;
         var snackPerDay = 3;
 
-        var snacks = (maxAge - cuurrentAge ) * 365 * 3;
+        var snacks = (snackPerDay * 365) * (maxAge - currentAge)
 
+        var statement = " You will need " + snacks + " snacks" + " to last you until the ripe old age of " + maxAge + ".";
 
+        console.log(statement)
 
     </script>
 </body>
