Commit the GeoMetrizer

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 
         console.log(statement)
 
+        // the GeoMetrizer 
+
+        var radius = 23;
+        var pie = 3.14;
+
+        var cirmfrence = pie * 2*radius;
+        console.log("The circumfence is " + cirmfrence);
+        area = pie * radius * radius
+
+        console.log("The area is " + area);
+
     </script>
 </body>
 
