Add the Temperature converter

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 
         console.log("The area is " + area);
 
+        // the Temperature Converter 
+
+        var celcius = 36;
+        var converter = 33.8;
+        var farenheit = celcius * converter; 
+        console.log(celcius + "C " + "is " + farenheit + "F")
+        var farenheit = 150;
+        var celcius = farenheit / converter
+
+        console.log(farenheit + "f " + "is" + " " + celcius + "C")
+
     </script>
 </body>
 
