--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
 
         console.log(farenheit + "f " + "is" + " " + celcius + "C")
 
+        // functions 
+
+        function sayMyName(name) {
+            console.log('Hi, ' +  name);
+        }
+
+        sayMyName('claire');
+        sayMyName("Testy McTesterFcae.");
+
+        function greetings(words) {
+            console.log("Hello " + words)
+        }
+
+        greetings('world!');
+        greetings("children!")
+
+        
+
+
     </script>
 </body>
 
