Add passing Variables

--- a/index.html
+++ b/index.html
@@ -72,9 +72,25 @@
         greetings('world!');
         greetings("children!")
 
-        
+        function addNumbers(num1, num2, num3) {
+            var result = num1 + num2 + num3;
+            console.log(result)
+        }
 
+        addNumbers(10, 10, 10)
 
+        // passing variables 
+
+        var x = 10;
+
+        function addVaraibles(x, b) {
+
+            var results = x + b;
+
+            console.log(results);
+        }
+
+        addVaraibles(x, 10);
     </script>
 </body>
 
