--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <script>
-
+        // variables
         var noOfChildren = 2;
         var partnersName = "Jenny";
         var geographicLocation = "Canada";
@@ -91,6 +91,16 @@
         }
 
         addVaraibles(x, 10);
+
+        // return value 
+
+        function addNumbers(num1, num2) {
+            var reults = num1 + num2
+            return reults;
+        }
+
+        addNumbers(10, 13);
+        console.log(addNumbers(10, 13));
     </script>
 </body>
 
