--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
             return reults;
         }
 
+        // or 
+
+        function addNumbers(num1, num2) {
+            return num1 + num2;
+        }
+
+        console.log(addNumbers(44, 44))
+
         addNumbers(10, 13);
         console.log(addNumbers(10, 13));
 
@@ -127,6 +135,102 @@
         }
 
         addDigits(20, 30);
+
+        // funtcion Exercises
+        // exercise 1 
+        /* Why pay a fortune teller when you can just program your fortune yourself?
+
+            Write a function named tellFortune that:
+            takes 4 arguments: number of children, partner's name, geographic location, job title.
+            outputs your fortune to the screen like so: "You will be a X in Y, and married to Z with N kids."
+            Call that function 3 times with 3 different values for the arguments.*/
+
+            function tellFortune(children, name, location, job) {
+                console.log("You will be a " + job + " " + "in " + location + ", " + "and married to " + name + " " + "with " + children + " kids."); 
+            }
+
+            tellFortune(5, "Betty", "Ontario, Canada", "Software engineer");
+
+            tellFortune(2, "Aziz", "Egypt", "Web master");
+            tellFortune("no", "Maureen", "Nairobi, Kenya", "Software developer")
+
+            // exercise 2 
+            /* You know how old your dog is in human years, but what about dog years? Calculate it!
+
+Write a function named calculateDogAge that:
+takes 1 argument: your puppy's age.
+calculates your dog's age based on the conversion rate of 1 human year to 7 dog years.
+outputs the result to the screen like so: "Your doggie is NN years old in dog years!"
+Call the function three times with different sets of values.
+Bonus: Add an additional argument to the function that takes the conversion rate of human to dog years.
+*/
+
+            function calculateDogAge(puppyAge) {
+                var dogYears = puppyAge * 7;
+
+                console.log("Your Doggie is " + dogYears + " years" +" in dog years.")
+
+                var humanAge = dogYears / 7;
+            }
+
+            calculateDogAge(3);
+            calculateDogAge(7);
+            calculateDogAge(12);
+
+            // exercise 3
+            /* Ever wonder how much a "lifetime supply" of your favorite snack is? Wonder no more!
+
+Write a function named calculateSupply that:
+takes 2 arguments: age, amount per day.
+calculates the amount consumed for rest of the life (based on a constant max age).
+outputs the result to the screen like so: "You will need NN to last you until the ripe old age of X"
+Call that function three times, passing in different values each time.
+Bonus: Accept floating point values for amount per day, and round the result to a round number.*/ 
+
+            function calculateSupply(age, amountPerDay) {
+                var maxAge = 100;
+                var snacks = (amountPerDay * 365 ) * (maxAge - age)  
+                console.log("you will need " + snacks + " to last you until the ripe age of " + age) 
+            }
+
+            calculateSupply(37, 6);
+            calculateSupply(83, 5);
+            calculateSupply(73, 4.3);
+
+            //exercise 4 
+            /* Create 2 functions that calculate properties of a circle, using the definitions here.
+
+Create a function called calcCircumfrence:
+
+Pass the radius to the function.
+Calculate the circumference based on the radius, and output "The circumference is NN".
+Create a function called calcArea:
+
+Pass the radius to the function.
+Calculate the area based on the radius, and output "The area is NN".*/ 
+
+
+            
+
+
+            function calcCircumfrence(radius) {
+                var mathPie = 3.14;
+                var circumfrence = mathPie * (2 * radius);
+
+                console.log("The Circumfrence is " + cirmfrence);
+            }
+
+            calcCircumfrence(5);
+            
+            function calcArea(radius) {
+                var mathPie = 3.14;
+                var area = mathpie * (radius**2); 
+
+                console.log (" The Area is " + area)
+            }
+
+            calcArea(5);
+
     </script>
 </body>
 
