--- a/index.html
+++ b/index.html
@@ -252,6 +252,90 @@ Calculate the area based on the radius, and output "The area is NN".*/
             celsiusToFahrenheit(32);
             fahrenheitToCelsius(100);
 
+            // exercise if/else statement 
+            /*Write a function named greaterNum that:
+takes 2 arguments, both numbers.
+returns whichever number is the greater (higher) number.
+Call that function 2 times with different number pairs, and log the output to make sure it works (e.g. "The greater number of 5 and 10 is 10.").*/ 
+
+            function greaterNum(num1, num2) {
+                if (num1 > num2) {
+                    return num1;
+                } else {
+                    return num2;
+                }
+            }
+
+            console.log(greaterNum(12, 32));
+
+            // The World Translator 
+            /* Write a function named helloWorld that:
+takes 1 argument, a language code (e.g. "es", "de", "en")
+returns "Hello, World" for the given language, for atleast 3 languages. It should default to returning English.
+Call that function for each of the supported languages and log the result to make sure it works.*/
+
+            function helloWorld(lang) {
+                if (lang == "fr") {
+                    console.log("Bonjour tout le monde");
+                } else if (lang == "es") {
+                    console.log("Hola Mundo"); 
+                } else {
+                    console.log("Hello world")
+                }
+            }
+
+            helloWorld("en");
+            helloWorld("fr");
+            helloWorld("es");
+
+            // The Grade assigner 
+            /*Write a function named assignGrade that:
+takes 1 argument, a number score.
+returns a grade for the score, either "A", "B", "C", "D", or "F".
+Call that function for a few different scores and log the result to make sure it works.*/ 
+
+            function assignGrade(grade) {
+                if (grade >= 90 || grade == 100) {
+                    return "A";
+                } 
+                else if (grade >= 80 && grade <= 89){
+                    return "B";
+                }
+                else if (grade >= 70 && grade <=79) {
+                    return "C";
+                }
+                else if (grade >= 60 && grade <= 69) {
+                    return "D"
+                }
+                else {
+                    return "F"
+                }
+            }
+
+            console.log(assignGrade(23));
+            console.log(assignGrade(92));
+            console.log(assignGrade(100));
+
+            // The Pluralizer 
+            /* Write a function named pluralize that:
+takes 2 arguments, a noun and a number.
+returns the number and pluralized form, like "5 cats" or "1 dog".
+Call that function for a few different scores and log the result to make sure it works.
+Bonus: Make it handle a few collective nouns like "sheep" and "geese".*/
+
+            var noun = "car";
+
+            function pluralize(noun, num) {
+                if (num != 1 && noun != "sheep" && noun != "geese"){
+                    return num + " " + noun + "s";
+                } else {
+                    return num + " " + noun ;
+                }
+            }
+
+            console.log(pluralize(noun, 1))
+
+
     </script>
 </body>
 
