--- a/index.html
+++ b/index.html
@@ -382,7 +382,29 @@ Bonus: Make it handle a few collective nouns like "sheep" and "geese".*/
             calc(5)
 
 
-            // tryout
+            // Exercise Strings 
+            /*Create a function called DrEvil. It should take a single argument, an amount, and return '<amount> dollars', except it will add '(pinky)' at the end if the amount is 1 million.*/  
+
+                function drEvil(amount) {
+                    if (amount == 1000000) {
+                        console.log(amount + " dollars" + " (pinky)");
+                    } else {
+                        console.log(amount + " dollars");
+                        return amount;
+                    }
+                }
+
+                drEvil(100000);
+
+                function mixUp(str1, str2) {
+                    var res1 = str2.substring(0, 2);
+                    var res2 = str1.substring(0, 2);
+                    var res3 = str1.substring(2);
+                    var res4 = str2.substring(2);
+                    console.log(res1 + res3 + ", " + res2 + res4);
+                }
+
+                mixUp("mop", "lex")
             
     </script>
 </body>
