add function expression

--- a/index.html
+++ b/index.html
@@ -431,6 +431,35 @@ Bonus: Make it handle a few collective nouns like "sheep" and "geese".*/
 
                 console.log(verbing("twerk"))
                 
+
+                // Not Bad exercise 
+                /* Create a function called notBad that takes a single argument, a string.
+It should find the first appearance of the substring 'not' and 'bad'.
+If the 'bad' follows the 'not', then it should replace the whole 'not'...'bad' substring with 'good' and return the result.
+If it doesn't find 'not' and 'bad' in the right sequence (or at all), just return the original sentence.*/ 
+
+        
+                // function notBad(string){
+                //     var notindex = string.indexOf(not);
+                //     var badindex = string.indexOf(bad);
+                //     if(notindex == -1 || badindex == -1 || badindex < notindex) {
+                //         return string;
+                //     } else {
+                //         return string.slice(0, notindex) + 'good' + sentence.slice(badindex + 3);
+                //     }
+                // }
+
+                // console.log(notBad("this dinner is not that bad"))
+
+                // function expression 
+
+                const calculateArea = function (width, length) {
+                    let area = width * length;
+                    return area;
+                }
+
+                calculateArea(4, 5);
+                console.log(calculateArea(5, 5));
     </script>
 </body>
 
