Add scope poluution

--- a/index.html
+++ b/index.html
@@ -510,6 +510,19 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
 
                     logVisibleLightWaves(); //Output: Moonlight
                     console.log(lightWaves);// Output: referenceError
+
+                //scope polluion 
+                const satellite = 'The Moon';
+                    const galaxy = 'The Milky Way';
+                    let stars = 'North Star';
+
+                    const callMyNightSky = () => {
+                        stars = 'Sirius';
+                        return 'Night Sky: ' + satellite + ', ' + stars + ', ' + galaxy;
+                    };
+
+                    console.log(callMyNightSky()); //output: Night Sky: The Moon, Sirius, The Milky Way
+                    console.log(stars);// output: Sirius
     </script>
 </body>
 
