--- a/index.html
+++ b/index.html
@@ -558,6 +558,25 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
                     }
 
                     console.log(cookFood('evening'));
+
+
+                    // quiz 
+
+                    /*Perform these exercises in the JavaScript console of your favorite web browser.
+
+                        What does the following expression return? */
+
+                        console.log(3 + 2); //output 5; 3 and 2 are operands and + is the operator
+
+                        console.log(3/'bob'); // NaN returned when a mathematical operation cannot yield a numeric result
+                        console.log(5 / 0); //infinity - a large number in Javascript that is bigger than the the biggest numberr JavaScript can represent. divison by zero should return undefined by=ut this us a Javascript quirk.
+                        console.log( NaN === NaN); // NaN is not equal to any value, including self
+                        console.log(typeof(NaN)); // 'Number' NaN has a "number" type
+                        console.log( isNaN(NaN)); // true ; the isNaN method returns false if the argument is a number and true otherwise. isNaN returns true if the argument is NaN.
+                        console.log(Math.pow(2, 3)); // 8 ; this expression represents 2 raised to the power of 3. the math object contains methods to assist with common mathematica; operations.
+                        console.log('cool'.length); // 4
+                        console.log(Math.round(4.87));
+
     </script>
 </body>
 
