--- a/index.html
+++ b/index.html
@@ -577,6 +577,14 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
                         console.log('cool'.length); // 4
                         console.log(Math.round(4.87));
 
+                        /*Create an anonymous function and assign it to the variable full_name. The function should take two arguments, first_name and last_name, and return the two strings concatenated.*/
+
+                        const fullName = (firstName, lastName) => {
+                            return firstName + " " +lastName;
+                        }
+
+                        console.log(fullName('David', 'Ouma'))
+
     </script>
 </body>
 
