add my_fun function

--- a/index.html
+++ b/index.html
@@ -595,6 +595,12 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
 
                         console.log(cube(2));
 
+                        function my_fun() {
+                            return "I am having fun";
+                        }
+
+                        my_fun();
+
     </script>
 </body>
 
