--- a/index.html
+++ b/index.html
@@ -585,6 +585,8 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
 
                         console.log(fullName('David', 'Ouma'));
 
+                        /*What does the following code print to the console?*/
+
                         function square (x) {
                             return (x * x);
                         }
@@ -593,6 +595,8 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
                             return(x * square(x))
                         }
 
+                        /*Invoke the my_fun() function.*/
+
                         console.log(cube(2));
 
                         function my_fun() {
@@ -600,6 +604,16 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
                         }
 
                         my_fun();
+
+                        /*What does the following code print to the console?*/
+
+                        const what = () => {
+                            return "HI!!!"
+                        };
+
+                        console.log(typeof(what));
+
+
 
     </script>
 </body>
