add array manipulation

--- a/index.html
+++ b/index.html
@@ -613,6 +613,12 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
 
                         console.log(typeof(what));
 
+                        /*what does the following code print to the console*/
+                        
+                        const arr = ["boy", 42, 23, function () { return "gotta catch 'em all, Pokemon!"}, 56]
+
+                        console.log(arr[3]());
+
 
 
     </script>
