first windows commit

--- a/index.html
+++ b/index.html
@@ -618,6 +618,9 @@ If it doesn't find 'not' and 'bad' in the right sequence (or at all), just retur
                         const arr = ["boy", 42, 23, function () { return "gotta catch 'em all, Pokemon!"}, 56]
 
                         console.log(arr[3]());
+                        
+
+                        // ok testing one two
 
 
 
